@@ -37,5 +37,5 @@
     "webRequestBlocking",
     "*://*/*"
   ],
-  "version": "3.1.8.1"
+  "version": "3.1.8.2"
 }
