@@ -739,5 +739,5 @@
     "*://*.wallkit.net/*",
     "*://webcache.googleusercontent.com/*"
   ],
-  "version": "3.1.8.1"
+  "version": "3.1.8.2"
 }
