@@ -3,6 +3,7 @@ Changelog Bypass Paywalls Clean - Chrome
 
 Post-release
 Remove (custom) Substack (fix obsolete)
+Fix Gruppo SAE.it (free articles only)
 Fix Tagesspiegel.de (not background/checkpoint)
 Update custom sites/popup (remove Google Search Tool)
 
